<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">


    <item android:title="@string/nav_menu_views">
        <group android:checkableBehavior="single">
            <item
                    android:id="@+id/nav_fpv"
                    android:title="@string/nav_frag_fpv_text"/>
            <item
                    android:id="@+id/nav_map"
                    android:title="@string/nav_frag_map_text"/>
            <item
                    android:id="@+id/nav_telemetrie"
                    android:title="@string/nav_frag_telemetrie_text"/>
        </group>
    </item>


    <item android:title="@string/nav_menu_manager">
        <menu>
            <item
                    android:id="@+id/nav_mission"
                    android:title="@string/nav_mission_text"/>
            <item
                    android:id="@+id/nav_mission_download"
                    android:title="@string/nav_mission_download_text"/>
            <item
                    android:id="@+id/nav_settings"
                    android:title="@string/nav_settings_text"/>
        </menu>
    </item>

</menu>
