<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.MissionActivity"
            android:orientation="vertical">

        <TextView
                android:text="@string/textview_mission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"/>

        <Spinner
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"/>

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
        </FrameLayout>

        <Button
                android:text="@string/btn_upload_mission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnUpload"/>

        <Button
                android:text="@string/btn_download_mission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnDownload"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:visibility="invisible"/>
    </LinearLayout>

</FrameLayout>